--- a/PlantBase/app/src/main/res/layout/activity_search.xml
+++ b/PlantBase/app/src/main/res/layout/activity_search.xml
@@ -45,6 +45,7 @@
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
                 android:ems="10"
+                android:fontFamily="@font/quicksand_regular"
                 android:hint="Search"
                 android:inputType="textPersonName"
                 android:singleLine="true"
@@ -63,6 +64,56 @@
                 android:paddingRight="10dp"
                 android:src="@drawable/ic_search_black_24px" />
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/quicksand_regular"
+            android:text="or"
+            android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
+            android:textSize="24sp"
+            android:textStyle="italic" />
+
+        <Button
+            android:id="@+id/buttonBrowse"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:alpha="0.5"
+            android:background="@android:drawable/editbox_background_normal"
+            android:fontFamily="@font/quicksand_regular"
+            android:text="Browse"
+            android:textAllCaps="false"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textView18"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/quicksand_regular"
+            android:text="or"
+            android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
+            android:textSize="24sp"
+            android:textStyle="italic" />
+
+        <Button
+            android:id="@+id/buttonAdd"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:alpha="0.5"
+            android:background="@android:drawable/editbox_background_normal"
+            android:fontFamily="@font/quicksand_regular"
+            android:text="Add new plant"
+            android:textAllCaps="false"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
