--- a/PlantBase/app/src/main/res/layout/activity_myplant.xml
+++ b/PlantBase/app/src/main/res/layout/activity_myplant.xml
@@ -58,13 +58,13 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/textView3"
+                            android:id="@+id/textViewMyPlantStatus"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Status: OK!" />
 
                         <TextView
-                            android:id="@+id/textView4"
+                            android:id="@+id/textViewMyPlantStartDate"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Start Date: 1-6-2018" />
@@ -86,16 +86,11 @@
                                 android:layout_height="match_parent">
 
                                 <CheckBox
-                                    android:id="@+id/checkBox8"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="CheckBox" />
-
-                                <TextView
-                                    android:id="@+id/textView10"
+                                    android:id="@+id/checkBoxNever"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Never" />
+
                             </TableRow>
 
                             <TableRow
@@ -103,16 +98,11 @@
                                 android:layout_height="match_parent">
 
                                 <CheckBox
-                                    android:id="@+id/checkBox"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="CheckBox" />
-
-                                <TextView
-                                    android:id="@+id/textView5"
+                                    android:id="@+id/checkBoxArduino"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Use Arduino" />
+
                             </TableRow>
 
                             <TableRow
@@ -120,16 +110,11 @@
                                 android:layout_height="match_parent">
 
                                 <CheckBox
-                                    android:id="@+id/checkBox2"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="CheckBox" />
-
-                                <TextView
-                                    android:id="@+id/textView6"
+                                    android:id="@+id/checkBoxDaily"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Daily" />
+
                             </TableRow>
 
                             <TableRow
@@ -137,16 +122,11 @@
                                 android:layout_height="match_parent">
 
                                 <CheckBox
-                                    android:id="@+id/checkBox3"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="CheckBox" />
-
-                                <TextView
-                                    android:id="@+id/textView7"
+                                    android:id="@+id/checkBoxTwoDays"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Every other day" />
+
                             </TableRow>
 
                             <TableRow
@@ -154,16 +134,11 @@
                                 android:layout_height="match_parent">
 
                                 <CheckBox
-                                    android:id="@+id/checkBox4"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="CheckBox" />
-
-                                <TextView
-                                    android:id="@+id/textView8"
+                                    android:id="@+id/checkBoxWeekly"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Weekly" />
+
                             </TableRow>
                         </TableLayout>
 
