--- a/PlantBase/app/src/main/res/layout/activity_plantinfo.xml
+++ b/PlantBase/app/src/main/res/layout/activity_plantinfo.xml
@@ -16,9 +16,10 @@
 
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageViewPlant"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
+            android:layout_gravity="top"
             android:layout_margin="8dp"
             app:srcCompat="@drawable/ic_launcher_background" />
 
