--- a/PlantBase/app/src/main/res/layout/item_my_plant.xml
+++ b/PlantBase/app/src/main/res/layout/item_my_plant.xml
@@ -12,9 +12,11 @@
 
         <ImageView
             android:id="@+id/imageViewMPFoto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="67dp"
+            android:layout_marginRight="8dp"
             android:layout_weight="1"
+            android:scaleType="centerCrop"
             app:srcCompat="@drawable/ic_launcher_background" />
 
         <LinearLayout
@@ -25,16 +27,18 @@
 
             <TextView
                 android:id="@+id/textViewMPName"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:textSize="24sp" />
+                android:textAlignment="center"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/textViewMPStatus"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textAlignment="center" />
 
             <ImageView
                 android:id="@+id/imageViewMPConnected"
