--- a/PlantBase/app/src/main/res/layout/item_plant_info.xml
+++ b/PlantBase/app/src/main/res/layout/item_plant_info.xml
@@ -7,24 +7,26 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageViewItemFoto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="67dp"
             android:layout_weight="1"
+            android:scaleType="centerCrop"
             app:srcCompat="@drawable/ic_launcher_background" />
 
         <TextView
             android:id="@+id/textViewItemPlantName"
-            android:layout_width="wrap_content"
+            android:layout_width="10dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/quicksand_regular"
             android:text="TextView"
-            android:textSize="24sp"
+            android:textAlignment="center"
+            android:textSize="18sp"
             android:textStyle="bold" />
     </LinearLayout>
 </LinearLayout>
