--- a/PlantBase/app/src/main/res/layout/activity_myplant.xml
+++ b/PlantBase/app/src/main/res/layout/activity_myplant.xml
@@ -119,6 +119,21 @@
 
                         </LinearLayout>
 
+                        <HorizontalScrollView
+                            android:id="@+id/horizontal_scrollMP"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:id="@+id/linearPhotos"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                            </LinearLayout>
+
+                        </HorizontalScrollView>
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
