--- a/PlantBase/app/src/main/res/layout/activity_linking.xml
+++ b/PlantBase/app/src/main/res/layout/activity_linking.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="5dp"
         android:layout_weight="1"
         android:orientation="vertical">
 
@@ -17,10 +18,39 @@
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:fontFamily="@font/quicksand_regular"
             android:text="Select a plant and than a PlantNode to link them together  Longpress a plant to remove the link"
             android:textAlignment="center"
             android:textSize="12sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/quicksand_regular"
+                android:text="Plants"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/quicksand_regular"
+                android:text="PlantNodes"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,12 +61,14 @@
                 android:id="@+id/listViewMPLink"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginRight="2dp"
                 android:layout_weight="1"></ListView>
 
             <ListView
                 android:id="@+id/listViewPlantNodes"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="2dp"
                 android:layout_weight="1"></ListView>
         </LinearLayout>
     </LinearLayout>
