--- a/PlantBase/app/src/main/res/layout/activity_account.xml
+++ b/PlantBase/app/src/main/res/layout/activity_account.xml
@@ -21,7 +21,7 @@
             android:fontFamily="@font/quicksand_light"
             android:text="@string/Welcome"
             android:textAlignment="center"
-            android:textSize="14sp" />
+            android:textSize="36sp" />
 
         <TextView
             android:id="@+id/textViewAccountName"
@@ -29,15 +29,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/quicksand_regular"
             android:text="Name"
-            android:textAlignment="center" />
-
-        <Button
-            android:id="@+id/buttonLogout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/quicksand_regular"
-            android:text="Logout"
-            android:textAllCaps="false" />
+            android:textAlignment="center"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/textViewGrowingPlants"
@@ -55,6 +48,16 @@
             android:fontFamily="@font/quicksand_regular"
             android:text="# plants died"
             android:textAlignment="center" />
+
+        <Button
+            android:id="@+id/buttonLogout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="100dp"
+            android:fontFamily="@font/quicksand_regular"
+            android:text="Logout"
+            android:textAllCaps="false" />
     </LinearLayout>
 
     <LinearLayout
