--- a/PlantBase/app/src/main/res/layout/activity_plantinfo.xml
+++ b/PlantBase/app/src/main/res/layout/activity_plantinfo.xml
@@ -36,6 +36,7 @@
             android:id="@+id/textViewPlantNameLatin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
             android:text="LatinName"
             android:textAlignment="center"
             android:textSize="18sp"
