--- a/PlantBase/app/src/main/res/layout/activity_myplant.xml
+++ b/PlantBase/app/src/main/res/layout/activity_myplant.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MyPlantActivity">
+    tools:context=".Activities.MyPlantActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
